...
    <string name="help_home_screen_text">Here you can practice your sign language, with feedback through your camera.
Make sure to check your daily quest to learn a new letter every day.
You’ll also find exercises at the bottom to challenge yourself at varying levels of difficulty.</string>
    <string name="close_text">Close</string>
    <string name="letters_learned_text">Letters learned</string>
    <string name="camera_permission_required_text">Camera permission required</string>
    <string name="welcome_text">Welcome to Signify</string>
    <string name="dark_mode_text">Dark Mode</string>
    <string name="light_mode_text">Light Mode</string>
    <string name="cancel_text">Cancel</string>
    <string name="unknown_text">unknown</string>
    <string name="my_friends_text">My Friends</string>
    <string name="my_stats_text">My Stats</string>
...
    <string name="request_sent_text">Request sent</string>
    <string name="add_friend_text">Add Friend</string>
    <string name="remove_friend_text">Remove Friend</string>
    <string name="my_profile_text">My Profile</string>
    <string name="search_by_user_ID_text">Search by user ID</string>
    <string name="no_item_available_text">No item available</string>
    <string name="remove_text">Remove</string>
    <string name="accept_text">Accept</string>
    <string name="decline_text">Decline</string>
    <string name="confirm_friend_removal_text">Are you sure you want to remove this friend?</string>
    <string name="confirm_challenge_deletion_text">Are you sure you want to delete this challenge?</string>
    <string name="removed_friend_text">Friend removed</string>
    <string name="removed_challenge_text">Challenge deleted</string>
    <string name="yes_button_text">Yes</string>
    <string name="no_button_text">No</string>
...
    <string name="exercise_completed_text">Exercise completed!</string>
    <string name="more_on_asl_alphabet_text">More on ASL Alphabet</string>
    <string name="make_a_sign_text">Make a sign</string>
    <string name="send_feedback_text">Send Feedback</string>
    <string name="create_a_challenge_text">Create a Challenge</string>
    <string name="my_ongoing_challenges_text">My Ongoing Challenges</string>
    <string name="opponent_text">Opponent</string>
    <string name="total_time_text">Your Total Time:</string>
    <string name="challenge_completed_text">Challenge already completed, wait for result</string>
    <string name="challenge_title_text">Select a Friend to Challenge</string>
    <string name="challenge_screen_title">Challenges</string>
    <string name="challenge_text">Challenge</string>
    <string name="send_challenge_text">Send Challenge</string>
...
