...

    navigation(
        startDestination = Screen.CHALLENGE.route,
        route = Route.CHALLENGE,
    ) {
      composable(Screen.CHALLENGE.route) {
        ChallengeScreen(
            navigationActions,
            dependencyProvider.userSession(),
            dependencyProvider.userRepository(),
            dependencyProvider.challengeRepository(),
            dependencyProvider.statsRepository())
      }
...
            dependencyProvider.userSession(),
            dependencyProvider.userRepository(),
            dependencyProvider.challengeRepository(),
            dependencyProvider.statsRepository())
      }
      composable(Screen.CHALLENGE_HISTORY.route) {
        ChallengeHistoryScreen(
            navigationActions,
            dependencyProvider.userSession(),
            dependencyProvider.userRepository(),
            dependencyProvider.challengeRepository(),
            dependencyProvider.statsRepository())
      }
...

    navigation(
        startDestination = Screen.PROFILE.route,
        route = Route.PROFILE,
    ) {
      composable(Screen.PROFILE.route) {
        ProfileScreen(
            navigationActions,
            dependencyProvider.userSession(),
            dependencyProvider.userRepository(),
            dependencyProvider.statsRepository())
      }
      composable(Screen.FRIENDS.route) {
        FriendsListScreen(
            navigationActions,
            dependencyProvider.userSession(),
            dependencyProvider.userRepository())
      }
      composable(Screen.SETTINGS.route) {
        SettingsScreen(
...
