...
    userViewModel.getOngoingChallenges()
  }
  val done = remember { mutableStateOf(false) }

  AnnexScreenScaffold(
      navigationActions = navigationActions,
      testTag = "NewChallengeScreen",
  ) {
    Spacer(modifier = Modifier.height(32.dp))

    // My Friends button
    TextButton(
        onClick = { navigationActions.navigateTo(Screen.FRIENDS) },
        testTag = "MyFriendsButton",
        text = stringResource(R.string.my_friends_text),
        backgroundColor = MaterialTheme.colorScheme.primary,
        textColor = MaterialTheme.colorScheme.onPrimary)

    Spacer(modifier = Modifier.height(32.dp))

    // Create a challenge button
    val createAChallengeText = stringResource(R.string.create_a_challenge_text)
    TextButton(
        onClick = { navigationActions.navigateTo(Screen.CREATE_CHALLENGE) },
        testTag = "CreateChallengeButton",
        text = createAChallengeText,
        backgroundColor = MaterialTheme.colorScheme.primary,
        textColor = MaterialTheme.colorScheme.onPrimary)

    Spacer(modifier = Modifier.height(32.dp))

...
